@@ -9,6 +9,8 @@ Features
 Bugfixes
 --------
 
+* Fix gallery metadata for multilingual sites (Issue #3078)
+
 New in v8.0.0b1
 ===============
 
